--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Resume - Start Bootstrap Theme</title>
+  <title>Pinja Similä</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -52,9 +52,9 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
-        </li>
+        </li> -->
       </ul>
     </div>
   </nav>
@@ -63,25 +63,25 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-0">Clarence
-          <span class="text-primary">Taylor</span>
+        <h1 class="mb-0">Pinja
+          <span class="text-primary">Similä</span>
         </h1>
-        <div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-          <a href="mailto:name@email.com">name@email.com</a>
+        <div class="subheading mb-5"> +358 40 936 9224 - 
+          <a href="mailto:pinja.simila@gmail.com">pinja.simila@gmail.com</a>
         </div>
-        <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+        <p class="lead mb-5">I am an ICT engineering student studying in Kajaani University of Applied Sciences. I am passionate about learning and becoming better every day. I also love cats.</p>
         <div class="social-icons">
-          <a href="#">
+          <a href="https://www.linkedin.com/in/pinja-simila/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="#">
+          <!--<a href="#">
             <i class="fab fa-github"></i>
-          </a>
+          </a> 
           <a href="#">
             <i class="fab fa-twitter"></i>
           </a>
           <a href="#">
-            <i class="fab fa-facebook-f"></i>
+            <i class="fab fa-facebook-f"></i> -->
           </a>
         </div>
       </div>
