--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <h1 class="mb-0">Pinja
           <span class="text-primary">Similä</span>
         </h1>
-        <div class="subheading mb-5"> +358 40 936 9224 - 
+        <div class="subheading mb-5">
           <a href="mailto:pinja.simila@gmail.com">pinja.simila@gmail.com</a>
         </div>
         <p class="lead mb-5">I am an ICT engineering student studying in Kajaani University of Applied Sciences. I am passionate about learning and becoming better every day. I also love cats.</p>
