--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
         </li>
-        <!-- <li class="nav-item">
+        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
         </li> -->
       </ul>
@@ -179,9 +179,9 @@
       <div class="w-100">
         <h2 class="mb-5">Skills</h2>
 
-       <!-- <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-        <ul class="list-inline dev-icons">
-          <li class="list-inline-item">
+        <div class="subheading mb-3">Programming Languages &amp; Tools</div>
+        
+          <!--<li class="list-inline-item">
             <i class="fab fa-html5"></i>
           </li>
           <li class="list-inline-item">
@@ -216,8 +216,19 @@
           </li>
           <li class="list-inline-item">
             <i class="fab fa-npm"></i>
-          </li>
+          </li> -->
+
+          <ul class="fa-ul mb-0">
+            <li>• MS Office</li>
+            <li>• The basics of C++</li>
+            <li>• The basics of Java</li>
+            <li>• Adobe Photoshop</li>
+            <li>• Adobe Illustrator</li>
+            <li>• Visual Studio Code</li>
+            
         </ul>
+
+        <br>        
 
         <div class="subheading mb-3">Workflow</div>
         <ul class="fa-ul mb-0">
@@ -235,7 +246,7 @@
             Agile Development &amp; Scrum</li>
         </ul>
       </div>
-    </section> -->
+    </section> 
 
     <hr class="m-0">
 <!--
