--- a/index.html
+++ b/index.html
@@ -159,16 +159,16 @@
           </div>
         </div>
 
-       <!--<div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+       <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">James Buchanan High School</h3>
-            <div class="subheading mb-3">Technology Magnet Program</div>
-            <p>GPA: 3.56</p>
+            <h3 class="mb-0">Kainuu Vocational Vollege</h3>
+            <div class="subheading mb-3">Media service provider</div>
+            <p>Photographing, 3D-modeling and animation</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2002 - May 2006</span>
+            <span class="text-primary">August 2016 - May 2019</span>
           </div>
-        </div>--> 
+        </div>
 
       </div>
     </section>
@@ -229,7 +229,7 @@
         </ul>
 
         <br>        
-
+<!--
         <div class="subheading mb-3">Workflow</div>
         <ul class="fa-ul mb-0">
           <li>
@@ -246,7 +246,7 @@
             Agile Development &amp; Scrum</li>
         </ul>
       </div>
-    </section> 
+    </section> -->
 
     <hr class="m-0">
 <!--
