--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">Kainuu Vocational Vollege</h3>
+            <h3 class="mb-0">Kainuu Vocational College</h3>
             <div class="subheading mb-3">Media service provider</div>
             <p>Photographing, 3D-modeling and animation</p>
           </div>
